# Logger

./: .gitignore  CMakeLists.txt  install_environment.bat  prepare_vs2015_x64.bat
include/: CMakeLists.txt
include/logger/: Formatter.hpp  Message.hpp
include/logger/details/: ConcurrentQueueSink.hpp  FileSink.hpp  MultithreadRegistry.hpp  MultithreadSink.hpp  MultithreadSinkFactory.hpp  StandardOutputSink.hpp
src/: CMakeLists.txt  main.cpp
src/benchmark/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt  main.cpp
src/logger/: BinaryFlag.hpp  Logger.hpp  Message.hpp  Registry.hpp  Sink.hpp  SinkFactory.hpp  StringHelpers.hpp
src/logger/details/: MultithreadRegistry.hpp
src/logger/impl/: MultithreadRegistry.hpp
